--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.perbone.toobox</groupId>
 	<artifactId>toolbox</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<name>ToolBox</name>
 	<description>Utility classes for Java Apps</description>
 	<url>https://github.com/perbone/toolbox</url>
