--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 	</developers>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
 		<app.name>toolbox</app.name>
 		<junit.version>4.12</junit.version>
 		<slf4j.version>1.7.25</slf4j.version>
@@ -63,9 +64,12 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.1</version>
 				<configuration>
-					<encoding>UTF-8</encoding>
-					<source>1.8</source>
-					<target>1.8</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<compilerArgs>
+						<arg>-Xlint:all,-options,-path</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -85,7 +89,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>2.20</version>
 				<configuration>
 					<skipTests>true</skipTests>
 				</configuration>
